# mathlist

./: .gitignore  .stack.yaml.swp  CHANGELOG.md  LICENSE  README.md  mathlist.cabal  stack.yaml
src/Math/: List.hs
src/Math/List/: FFT.hs  Wavelet.hs
