cabal-version:       >=1.10
name:                mathlist
version:             0.1.0.0
synopsis:            Math using lists, including FFT and Wavelet
description:
  This package contains standard one-dimensional mathematical transforms (FFT, Wavelet, etc.) applied to Haskell lists. Documentation including mathematical details and examples are included to facilitate use with small or moderate sized problems, and for educational purposes. The algorithms have a very consise representation in Haskell that is a direct translation of the mathematical formulations.
  .
  Some of the examples use the HakellR package and the hybrid Haskell/R environment that it provides. This permits use of R's powerful graphics tools,  and its platform stability, in a Haskell "playground" that requires minimal configuration. HaskellR's Jupyter kernel for Haskell is an added bonus. None of the functions of this package depend on R or HaskellR. The graphics output is included in the Hackage docs. A tutorial on HaskellR will be released after this package is published (the tutorial uses this package).
license:             BSD3
license-file:        LICENSE
author:              Dominick Samperi
maintainer:          djsamperi@gmail.com
category:            Math, Numerics, Education
build-type:          Simple

Library
  Build-depends:      base == 4.*
  Exposed-modules:    Math.List, Math.List.Wavelet, Math.List.FFT
  default-language:   Haskell2010
  hs-source-dirs:     src
  
